<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Llayout"
    android:background="@drawable/gradient_list"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UserLogIn">




    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logoimage"
        android:transitionName="logo_image"
        android:src="@drawable/robot"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/l_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubblegum_sans"
        android:text="Welcome! Lets wake up lexi."
        android:transitionName="app_name"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="30sp" tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap_bold"
        android:textColor="#2874A6"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:transitionName="logo_desc" tools:targetApi="lollipop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:hint="@string/usernamee"
            android:textColorHint="#9A000000"
            app:hintEnabled="true"
            android:transitionName="user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" tools:targetApi="lollipop">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />


        </com.google.android.material.textfield.TextInputLayout>






        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/pass_word"
            android:textColorHint="#9A000000"
            android:transitionName="pass_word"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>







        <Button
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_margin="1dp"
            android:elevation="0dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:background="@android:color/transparent"
            android:textSize="12sp" tools:targetApi="lollipop">

        </Button>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/rec"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:transitionName="button_tran" tools:targetApi="lollipop">

        </Button>


    </LinearLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/new_here_come_sign_up"
        android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:transitionName="button_tran1" tools:targetApi="lollipop">

    </Button>


</LinearLayout>